[FIXED JENKINS-12061]
I still don't fully understand why the right border gets cropped, but
playing with DOM manipulation window, it seems like the cell-level
"border-right: none" is winning over the table level "border: 1px solid
talks about the border conflict resolution specified in
http://www.w3.org/TR/CSS2/tables.html#border-conflict-resolution

What this fix does is to set the cell-level right border for pane
tables. I realize that this might break table nesting inside another
table.

--- a/war/src/main/webapp/css/style.css
+++ b/war/src/main/webapp/css/style.css
@@ -324,6 +324,9 @@ table.pane {
   border-collapse: collapse;
   border: 1px #bbb solid;
 }
+table.pane > tbody > tr > td:last-child {
+  border-right: 1px #bbb solid;
+}
 
 td.pane {
   border: 1px #bbb solid;
